<?xml version="1.0"?>
<package>
  <name>navigation_trajectory_planner</name>
  <version>0.0.0</version>
  <description>Generic planner functionality for SBPL XYTheta planning.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fleckenf@todo.todo">fleckenf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sbpl_generic_planner</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>color_tools_ros</build_depend>
  <build_depend>freespace_mechanism_heuristic</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>move_base_trajectory</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sbpl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>timing</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>navigation_trajectory_msgs</build_depend>
  <build_depend>navigation_trajectory_utils</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>color_tools_ros</run_depend>
  <run_depend>freespace_mechanism_heuristic</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>move_base_trajectory</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sbpl</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>timing</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>navigation_trajectory_msgs</run_depend>
  <run_depend>navigation_trajectory_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
